--- a/ssseoho/Untitled.ipynb
+++ b/ssseoho/Untitled.ipynb
@@ -20,8 +20,8 @@
     "#글씨를 선명히\n",
     "set_matplotlib_formats\n",
     "\n",
-    "#음수처리\n",
-    "mpl.rc('axes', unicode_minus = False)\n",
+    "#음수처리v123fdv\n",
+    "mpl.rc('axes', unicode_minus = False)v123fdv\n",
     "\n",
     "pd.options.display.max_columns = 100"
    ]
@@ -5562,7 +5562,7 @@
     }
    ],
    "source": [
-    "data.drop(list_r,axis=0)"
+    "data.drop(list_r,axis=0)v123fdv"
    ]
   },
   {
